--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -55,6 +55,9 @@
   justify-self: center;
   margin: 10px 10px;
 }
+.results-results p {
+  text-align: center;
+}
 .results-redirect {
   grid-row: 5 / 6;
   grid-column: 2 / 3;
