--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -2,6 +2,7 @@
   <div class="header-container">
     <h2>NEW GAME</h2>
   </div>
+  <% start_time = Time.now %>
   <div class="letters-container">
     <% @letters.each do |letter| %>
     <ul class="list">
@@ -15,6 +16,7 @@
     <form action="/score" method="post">
       <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
       <input type="hidden" name="letters" value="<%= @letters.join %>">
+      <input type="hidden" name="start_time" value="<%= start_time %>">
       <input type="text" name="answer" placeholder="longest word you can find" class="form-answer">
       <input type="submit" class="form-btn" value="SUBMIT!">
     </form>
